--- a/src/Sitecore.Support.27341/App_Config/Include/zzz/Sitecore.Support.27341.config
+++ b/src/Sitecore.Support.27341/App_Config/Include/zzz/Sitecore.Support.27341.config
@@ -2,7 +2,7 @@
   <sitecore>
     <events>
       <event name="publishingservice:publishend">
-        <handler type="Sitecore.Support.Publishing.Service.Events.PublishEndHandler, Sitecore.Support"  patch:instead="*[@type='Sitecore.Publishing.Service.Events.PublishEndHandler, Sitecore.Publishing.Service']" method="TriggerPublishEnd" />
+        <handler type="Sitecore.Support.Publishing.Service.Events.PublishEndHandler, Sitecore.Support.27341"  patch:instead="*[@type='Sitecore.Publishing.Service.Events.PublishEndHandler, Sitecore.Publishing.Service']" method="TriggerPublishEnd" />
       </event>
     </events>
   </sitecore>
