Suppress publish:end event Add 'Sitecore.Social.Client.MessagePosting.Handlers.PublishEndHandler' to 'publish:end:remote'

--- a/src/Sitecore.Support.27341/App_Config/Include/zzz/Sitecore.Support.27341.config
+++ b/src/Sitecore.Support.27341/App_Config/Include/zzz/Sitecore.Support.27341.config
@@ -4,6 +4,9 @@
       <event name="publishingservice:publishend">
         <handler type="Sitecore.Support.Publishing.Service.Events.PublishEndHandler, Sitecore.Support.27341"  patch:instead="*[@type='Sitecore.Publishing.Service.Events.PublishEndHandler, Sitecore.Publishing.Service']" method="TriggerPublishEnd" />
       </event>
+      <event name="publish:end:remote">
+        <handler type="Sitecore.Social.Client.MessagePosting.Handlers.PublishEndHandler, Sitecore.Social.Client" method="ClearDbMesageCache" />
+      </event>
     </events>
   </sitecore>
 </configuration>
